<?xml version="1.0"?>
<package>
  <name>zed_ros</name>
  <version>0.0.1</version>
  <description>ZED ROS Nodes</description>
  <maintainer email="carroll.michael@gmail.com">Michael Carroll</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>

